Add columns and changed font.

--- a/css/styles.css
+++ b/css/styles.css
@@ -1,4 +1,9 @@
-h1 {
+body {
   font-family: Helvetica, sans-serif;
-  color: red;
+}
+
+.column{
+  width: 400px;
+  float: left;
+  margin: 10px;
 }
