Add background color and align text.

--- a/css/styles.css
+++ b/css/styles.css
@@ -1,9 +1,29 @@
 body {
   font-family: Helvetica, sans-serif;
+  text-align: center;
 }
 
-.column{
+body p {
+  text-align: justify;
+}
+
+.column {
   width: 400px;
   float: left;
   margin: 10px;
+  background-color: #339966;
+}
+
+.column ul {
+  background-color: #39ac73;
+  font-size: 14px;
+  text-align: left;
+  width: 200px;
+  align-items: center;
+  margin: 10px;
+}
+
+.column h3 {
+  text-align: center;
+
 }
