--- a/css/styles.css
+++ b/css/styles.css
@@ -27,3 +27,25 @@ body p {
   text-align: center;
 
 }
+
+@media screen and (min-width: 700px) {
+  .column {
+    width: 400px;
+    float: left;
+    margin: 10px;
+  }
+}
+
+@media screen and (max-width: 700px) and (min-width: 500px) {
+  body {
+    background-color:#339966;
+    color: white;
+  }
+}
+
+@media screen and (max-width: 500px) {
+  body {
+    background-color: #39ac73;
+    color: black;
+  }
+}
